<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background"
    tools:context=".ui.main.fragments.SearchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/search_fragment_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                app:fontFamily="@font/baloo_bhai_2_semibold"
                android:text="@string/search_frag_top_hint" />

            <EditText
                app:fontFamily="@font/baloo_bhai_2_semibold"
                android:id="@+id/search_fragment_input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.6"
                android:maxLength="15"
                android:singleLine="true" />

            <Button
                android:id="@+id/search_fragment_search_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:fontFamily="@font/baloo_bhai_2_semibold"
                android:layout_weight="0.3"
                android:text="@string/search_frag_top_btn"/>

            </LinearLayout>

        <TextView
            android:textSize="17sp"
            android:textStyle="bold"
            android:id="@+id/search_fragment_text_cook"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_height="wrap_content"
            app:fontFamily="@font/baloo_bhai_2_semibold"
            android:text="@string/search_frag_top_cook_text" />


        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_frag_radio_opt_0"
                android:id="@+id/radioButton"
                android:layout_gravity="center_horizontal"
                app:fontFamily="@font/baloo_bhai_2_semibold"
                android:checked="false"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_frag_radio_opt_1"
                android:id="@+id/radioButton2"
                android:layout_gravity="center_horizontal"
                app:fontFamily="@font/baloo_bhai_2_semibold"
                android:checked="false"
                android:layout_weight="1" />


            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:fontFamily="@font/baloo_bhai_2_semibold"
                android:text="@string/search_frag_radio_opt_2"
                android:id="@+id/radioButton3"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:fontFamily="@font/baloo_bhai_2_semibold"
                android:text="@string/search_frag_radio_opt_3"
                android:id="@+id/radioButton4"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:layout_weight="1" />

        </RadioGroup>


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_fragment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@color/black" />

        </LinearLayout>

    <!-- LOADING SCREEN-->
    <RelativeLayout
        android:background="@color/black_light"
        android:id="@+id/search_fragment_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleLarge">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</FrameLayout>