<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="14dp"
    android:background="@color/orange_background">

    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:id="@+id/title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/quit_dialog_content_title"
        android:textColor="@color/red_dark"
        android:textSize="18sp"
        app:fontFamily="@font/baloo_bhai_2_semibold" />

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/close_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/quit_dialog_content_btn_yes"
            android:textColor="@color/blue_light"
            android:textSize="16sp"
            app:fontFamily="@font/baloo_bhai_2_semibold" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/quit_dialog_content_btn_no"
            android:textColor="@color/blue_light"
            android:textSize="16sp"
            app:fontFamily="@font/baloo_bhai_2_semibold" />
    </LinearLayout>

</LinearLayout>